--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "discord.js": "^14.16.3",
     "dotenv": "^16.4.5",
     "firebase": "^11.0.1",
     "firebase-admin": "^12.7.0"
