--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   "dependencies": {
     "discord.js": "^14.16.3",
     "dotenv": "^16.4.5",
-    "firebase": "^11.0.1",
-    "firebase-admin": "^12.7.0"
+    "firebase": "^11.0.1"
   }
 }
